syntax = "proto3";

package pb;
option go_package = "./pb";

message Unreal {
  string prop1 = 1;
  string prop2 = 2;
  string prop3 = 3;
  string prop4 = 4;
  string prop5 = 5;
  string prop6 = 6;
  string prop7 = 7;
  string prop8 = 8;
  string prop9 = 9;
  string prop10 = 10;
  string prop11 = 11;
  string prop12 = 12;
  string prop13 = 13;
  string prop14 = 14;
  string prop15 = 15;
  string prop16 = 16;
  string prop17 = 17;
  string prop18 = 18;
  string prop19 = 19;
  string prop20 = 20;
  string prop21 = 21;
  string prop22 = 22;
  string prop23 = 23;
  string prop24 = 24;
  string prop25 = 25;
  string prop26 = 26;
  string prop27 = 27;
  string prop28 = 28;
  string prop29 = 29;
  string prop30 = 30;
  string prop31 = 31;
  string prop32 = 32;
  string prop33 = 33;
  string prop34 = 34;
  string prop35 = 35;
  string prop36 = 36;
  string prop37 = 37;
  string prop38 = 38;
  string prop39 = 39;
  string prop40 = 40;
  string prop41 = 41;
  string prop42 = 42;
  string prop43 = 43;
  string prop44 = 44;
  string prop45 = 45;
  string prop46 = 46;
  string prop47 = 47;
  string prop48 = 48;
  string prop49 = 49;
  string prop50 = 50;
  string prop51 = 51;
  string prop52 = 52;
  string prop53 = 53;
  string prop54 = 54;
  string prop55 = 55;
  string prop56 = 56;
  string prop57 = 57;
  string prop58 = 58;
  string prop59 = 59;
  string prop60 = 60;
  string prop61 = 61;
  string prop62 = 62;
  string prop63 = 63;
  string prop64 = 64;
  string prop65 = 65;
  string prop66 = 66;
  string prop67 = 67;
  string prop68 = 68;
  string prop69 = 69;
  string prop70 = 70;
  string prop71 = 71;
  string prop72 = 72;
  string prop73 = 73;
  string prop74 = 74;
  string prop75 = 75;
  string prop76 = 76;
  string prop77 = 77;
  string prop78 = 78;
  string prop79 = 79;
  string prop80 = 80;
  string prop81 = 81;
  string prop82 = 82;
  string prop83 = 83;
  string prop84 = 84;
  string prop85 = 85;
  string prop86 = 86;
  string prop87 = 87;
  string prop88 = 88;
  string prop89 = 89;
  string prop90 = 90;
  string prop91 = 91;
  string prop92 = 92;
  string prop93 = 93;
  string prop94 = 94;
  string prop95 = 95;
  string prop96 = 96;
  string prop97 = 97;
  string prop98 = 98;
  string prop99 = 99;
  string prop100 = 100;
}
